h10-core/main/default/objects/Callout_Log__c/Callout_Log__c.object-meta.xml
<CustomObject>
    <description>Stores the callout logs</description>
    <label>Callout Log</label>
    <nameField>
        <displayFormat>CLOG-{000000}</displayFormat>
        <label>Callout Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>