h10-core/main/default/objects/Callout_Log__c/fields/Callout_Time__c.field-meta.xml
<CustomField>
    <fullName>Callout_Time__c</fullName>
    <description>Stores the time spent in the callout</description>
    <label>Callout Time</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>