h10-core/main/default/objects/Callout_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Stores the request endpoint</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>