h10-core/main/default/objects/Callout_Log__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Stores the HTTP Method used in the callout</description>
    <label>Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>