h10-core/main/default/objects/Callout_Log__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <description>Related to object Id</description>
    <label>Related To</label>
    <length>18</length>
    <type>Text</type>
</CustomField>