h10-core/main/default/objects/Callout_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <description>Stores the request body</description>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>